Add database seeding functionality and improve documentation
Features:
- Add SeedData.java to populate database with 22 employees, 5 departments, 8 projects, and 12 equipment
- Add run.sh script for convenient program execution with correct classpath
- Add .gitignore to exclude database files and compiled classes
- Update README.md with seeding instructions and benefits
- Update QUICK_START.md with seeding step and improved compilation instructions

This enables quick testing and demonstration of the system with realistic African wildlife organization data.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>